--- a/tzdata/update_test_app/AndroidManifest.xml
+++ b/tzdata/update_test_app/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="libcore.tzdata.update_test_app.installupdatetestapp" >
 
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+    <uses-permission android:name="android.permission.UPDATE_CONFIG" />
 
     <application
         android:allowBackup="false"
